# vectorscope

./: .gitignore  ASTEROIDS.md  README.md  pyproject.toml
vectorscope/: __init__.py  __main__.py  asteroids_player.py  base.py  circle.py  cli.py  clock.py  config.py  fractal.py  hershey_player.py  interactive.py  logging_setup.py  ngon.py  platonic.py  polyline.py  sinc.py  spiral.py  spirograph.py  svg.py  text.py  web.py  zcal.py
vectorscope/asteroids/: README.md  __init__.py  asteroids.py  badies.py  ship.py  shooter.py  soundManager.py  stage.py
vectorscope/asteroids/util/: __init__.py  geometry.py  rect.py  vectorsprites.py
