[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorscope"
version = "0.1.0"
description = "Draw on your oscilloscope! Tools for displaying graphics in XY mode."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kevin"}
]
keywords = ["oscilloscope", "audio", "graphics", "xy-mode", "vectorscope"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "sounddevice",
    "soundfile",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/kevin/vectorscope"
Repository = "https://github.com/kevin/vectorscope"

[project.scripts]
vectorscope = "vectorscope.cli:main"

[tool.setuptools.packages.find]
include = ["vectorscope*"]

[tool.ruff]
line-length = 100
target-version = "py38"
